{{$NEXT}}

1.3098      28.07.2012

    [ ENHANCEMENTS ]
    * New keyword 'plugin_args' exported by Dancer::Plugin to provide
      a consistent way with Dancer 2 to obtain arguments from a plugin
      keyword. (Alberto Simões).
    * Add 'execute_hook' and deprecate 'execute_hooks' for homogeneity
      with Dancer 2.

    [ DOCUMENTATION ]
    * Fix escaping on some docs (Stefan Hornburg @racke).

1.3097      08.07.2012

    [ ENHANCEMENTS ]
    * New keywords 'register_hook' and 'execute_hooks' exported by
      Dancer::Plugin to provide a consistent way with Dancer 2 to declare and
      run hooks from within a plugin (Alexis Sukrieh, idea from David Precious).

1.3096      06.07.2012
    ** Codename: Chop Hooey // Neil Hooey **

    [ ENHANCEMENTS ]
    * Finally released, thanks to Neil Hooey bugging my sorry ass.

1.3095_02   03.07.2012

    [ BUG FIXES ]
    * fix exception tests in some cases (GH #734) (Damien Krotkine & katkad )

    [ ENHANCEMENTS ]
    * If YAML does not load, Dancer::Config now reports why (Ovid)

    [ DOCUMENTATION ]
    * Clarify serialization in introduction POD (Mark A. Stratman)
    * Typo fix (Sam Kington)

1.3095_01   22.06.2012

    [ BUG FIXES ]
    * Don't assume returned references are blessed when considering
      continuations (Neil Hooey, GH-778)
    * Malformed/missing cookies caused warnings 
      (James Aitken/LoonyPandora, GH-782 and GH-783)
    * Avoid potential crash in t/14_serializer/06_api.t if tmp dir is replaced
      when %ENV gets cleared (Adam Kennedy)
    * Properly initialize %callbacks to default empty hashref  in _send_file if 
      not provided (Gary Mullen)

    [ ENHANCEMENTS ]
    * Add UTC timestamp options for logger_format (Alex C - perlpong).
    * Tests can now run in parallel (Richard Simões).
    * dancer_version keyword added (Damien "dams" Krotkine).
    * New session_domain paramter allows you to set the domain of the default
      session cookie (William Wolf)

    [ DOCUMENTATION ]